feat: add endpoint to get balance information with loan
